[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/intro_story/intro_story2.png" type="Texture" id=1]
[ext_resource path="res://assets/intro_story/intro_story1.png" type="Texture" id=2]
[ext_resource path="res://assets/intro_story/intro_story3.png" type="Texture" id=3]
[ext_resource path="res://src/IntroStory/IntroStory.gd" type="Script" id=4]
[ext_resource path="res://src/FadeScreen/FadeLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/intro_story/buttons/arrow.png" type="Texture" id=6]
[ext_resource path="res://assets/intro_story/buttons/playBtn.png" type="Texture" id=7]
[ext_resource path="res://assets/intro_story/buttons/playBtn_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/intro_story/buttons/playBtn_press.png" type="Texture" id=9]

[node name="IntroStory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
fade_colors = [ Color( 0.121569, 0.254902, 0.0666667, 1 ), Color( 0.466667, 0.572549, 0.564706, 1 ), Color( 0.698039, 0.458824, 0.301961, 1 ) ]
fade_time = 1.0

[node name="Story1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeLayer" parent="." instance=ExtResource( 5 )]

[node name="NextArrow" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 544.0
margin_right = 1272.0
margin_bottom = 713.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="PlayBtn" type="TextureButton" parent="."]
visible = false
margin_left = 800.0
margin_top = 464.0
margin_right = 1282.0
margin_bottom = 699.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
